Updated Clion build options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(MC504_projeto1 C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(MC504_projeto1 main.c)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -lm")
