--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(MC504_projeto1 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(MC504_projeto1 main.c)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -lm")
+add_executable(MC504_projeto1 main.c sobel.c sobel.h)
+target_link_libraries(MC504_projeto1 PRIVATE m)
