--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(MC504_projeto1 C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(MC504_projeto1 main.c sobel.c sobel.h img_utils.c img_utils.h)
-target_link_libraries(MC504_projeto1 PRIVATE m)
+target_link_libraries(MC504_projeto1 PRIVATE m pthread)
